--- a/przetwarzanie-multimediow/wp-jupyter/Containerfile
+++ b/przetwarzanie-multimediow/wp-jupyter/Containerfile
@@ -6,4 +6,4 @@ RUN apt-get update --yes &&\
 		apt-get clean && rm -rf /var/lib/apt/lists/*
 
 USER ${NB_UID}
-RUN python -m pip install --upgrade opencv-python
+RUN python -m pip install --upgrade opencv-python ydata-profiling
