--- a/wzorce-projektowe/lab8/CMakeLists.txt
+++ b/wzorce-projektowe/lab8/CMakeLists.txt
@@ -6,19 +6,18 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 project(MVVM)
 
 # GLFW
-add_subdirectory(./third-party/glfw)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third-party/glfw)
 
 # Dear ImGui
 file(GLOB IMGUI_SRCS
-  ./third-party/imgui/*.cpp
-  ./third-party/imgui/backends/*opengl3.cpp
-  ./third-party/imgui/backends/*glfw.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/third-party/imgui/*.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/third-party/imgui/backends/*opengl3.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/third-party/imgui/backends/*glfw.cpp
 )
 add_library(imgui ${IMGUI_SRCS})
 target_include_directories(imgui PUBLIC
-  ${glfw_INCLUDE_DIRS}
-  ./third-party/imgui
-  ./third-party/imgui/backends
+  ${CMAKE_CURRENT_SOURCE_DIR}/third-party/imgui
+  ${CMAKE_CURRENT_SOURCE_DIR}/third-party/imgui/backends
 )
 target_link_libraries(imgui PUBLIC
   glfw
@@ -26,25 +25,30 @@ target_link_libraries(imgui PUBLIC
 
 # Memento hello
 file(GLOB_RECURSE MEMENTO_SRCS
-  ./src/memento/*.cc
-  ./src/memento/*.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/memento/*.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/memento/*.cpp
 )
 add_executable(hello-memento ${MEMENTO_SRCS})
 
 # OpenGL
 include(FindOpenGL)
 
+# libmemento
+Add_library(memento
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/memento/CareTaker.cc
+)
+target_include_directories(memento PUBLIC
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/memento
+)
+
 # The app - Command and Memento
 file(GLOB_RECURSE APP_SRCS
-  ./src/app/*.cc
-  ./src/app/*.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/app/*.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/app/*.cpp
 )
 add_executable(app ${APP_SRCS})
-target_include_directories(app PRIVATE
-  ${OPENGL_INCLUDE_DIR}
-  ${imgui_INCLUDE_DIRS}
-)
 target_link_libraries(app PRIVATE
   ${OPENGL_LIBRARIES}
   imgui
+  memento
 )
